res/binaryninjacore.h

	
typedef struct BNFileMetadata BNFileMetadata;
	BINARYNINJACOREAPI bool BNIsLicenseValidated(void);
	BINARYNINJACOREAPI bool BNIsUIEnabled(void);
	BINARYNINJACOREAPI bool BNInitCorePlugins(void);
	BINARYNINJACOREAPI void BNInitUserPlugins(void);
  
	BINARYNINJACOREAPI void BNInitRepoPlugins(void);
	BINARYNINJACOREAPI void BNSetBundledPluginDirectory(const char* path);
	
	BINARYNINJACOREAPI BNFileMetadata* BNCreateFileMetadata(void);
	BINARYNINJACOREAPI void BNFreeFileMetadata(BNFileMetadata* file);